put a title & piece of body text.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-hello world
+<!DOCTYPE html>
+    <html>
+        <head>
+            <title>Sleepyhead</title>
+        </head>
+        <body><b>HI</b> this is where my stuff will all be going on my adventure through coding or even just experiences and the like.</body>
+    </html>
